# HwpAutomation

./: .bashrc  .gitignore  HwpAutomation.spec  IDRIS2_USAGE.md  README.md  README_V2.md  TODO.md  build.bat  check_specs.ps1  check_specs.sh  claude.md  claude_desktop_config.json  pyproject.toml  run_ui.py  test_appv1_two_files.py  test_insertfile_3files_timing.py  test_naming.py
.claude/: settings.local.json
AppV1/: README.md  __init__.py  column.py  file_inserter.py  integrated_merger.py  merger.py  page_setup.py  para_scanner.py  preprocessor.py  types.py
CodeReview/: APPLY_GUIDE.md  CodeReview_2025-11-13_v2_README.md  QUICK_FIXES_v2.md
CodeReview_2025-11-13/: README.md
FunctionTest/: PARAMETER_TABLE_GUIDE.md  POSITION_COORDINATE_GUIDE.md  list_e2e_files.py  test_analyze_2page_structure.py  test_analyze_result.py  test_check_file_last_para.py  test_cleanup_and_merge.py  test_cleanup_source_file.py  test_column_tracker.py  test_create_b4_two_column_template.py  test_create_two_columns.py  test_debug_para_scan.py  test_delete_empty_with_movesel.py  test_detect_empty_columns.py  test_detect_empty_para_by_position.py  test_detect_empty_simple.py  test_document_structure.py  test_e2e_b4_two_column_merge.py  test_e2e_column_insertion.py  test_explore_all_lists.py  test_first_column_position.py  test_insert_three_problems.py  test_insert_three_problems_with_break.py  test_inspect_para_0_and_1.py  test_key_indicator.py  test_merge_pages_to_one.py  test_merge_pages_to_one_v2.py  test_move_from_second_to_zero.py  test_movesel_research.py  test_page_column_detection.py  (+7 more)
(+297 files in other folders)
