[project]
name = "HwpAutomation"
version = "0.1.0"
description = "MCP server for HWP (Hangul Word Processor) automation"
authors = [{ name = "HwpAutomation Team" }]
requires-python = ">=3.13"
dependencies = [
    "mcp>=0.9.0",
    "pywin32>=306",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
